; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_kgdb.c_kgdb_register_callbacks.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_kgdb.c_kgdb_register_callbacks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kgdb_io_module_registered = common dso_local global i32 0, align 4
@kgdb_use_con = common dso_local global i64 0, align 8
@kgdb_con_registered = common dso_local global i32 0, align 4
@kgdbcons = common dso_local global i32 0, align 4
@sysrq_gdb_op = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @kgdb_register_callbacks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kgdb_register_callbacks() #0 {
  %1 = load i32, i32* @kgdb_io_module_registered, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %13, label %3

3:                                                ; preds = %0
  store i32 1, i32* @kgdb_io_module_registered, align 4
  %4 = call i32 (...) @kgdb_arch_init()
  %5 = load i64, i64* @kgdb_use_con, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %3
  %8 = load i32, i32* @kgdb_con_registered, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %7
  %11 = call i32 @register_console(i32* @kgdbcons)
  store i32 1, i32* @kgdb_con_registered, align 4
  br label %12

12:                                               ; preds = %10, %7, %3
  br label %13

13:                                               ; preds = %12, %0
  ret void
}

declare dso_local i32 @kgdb_arch_init(...) #1

declare dso_local i32 @register_console(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
